# AlientekAiBox1

./: AlientekAiBox1_V1.0.draw.io  AlientekAiBox1_V1.0.drawio  CMakeLists.txt  fix_drawio.py  sdkconfig  sdkconfig.old
components/app_event_component/: CMakeLists.txt
components/app_event_component/include/: app_event.h
components/app_event_component/src/: app_event.c
components/i2c_bus_component/: CMakeLists.txt
components/i2c_bus_component/include/: i2c_bus_component.h
components/i2c_bus_component/src/: i2c_bus_esp32.c
components/smartconfig_component/: CMakeLists.txt  Kconfig
components/smartconfig_component/include/: smartconfig_component.h
components/smartconfig_component/src/: sc_driver_esptouch.c  sc_storage_nvs.c  sc_wifi_esp32.c  smartconfig_component.c  smartconfig_component_internal.h
components/xl9555_component/: CMakeLists.txt
components/xl9555_component/include/: xl9555_component.h  xl9555_event.h  xl9555_pins.h
components/xl9555_component/src/: xl9555_component.c  xl9555_event.c  xl9555_gpio_adapter.c
main/: AlientekAiBox1.c  CMakeLists.txt  Kconfig.projbuild  app_event.c  app_event.h  app_init.c  app_init.h  app_led.c  app_led.h  app_mqtt.c  app_mqtt.h  app_version.c  app_version.h  app_wifi.c  app_wifi.h  idf_component.yml  led_driver.h  led_gpio.c  led_gpio.h  version_info.h.in
