idf_component_register(
    SRCS 
        "AlientekAiBox1.c"
        "app_init.c"
        "app_wifi.c"
        "app_led.c"
        "led_gpio.c"
        "app_version.c"
        "app_mqtt.c"
    INCLUDE_DIRS 
        "."
        "${CMAKE_SOURCE_DIR}/components/smartconfig_component/include"
        "${CMAKE_BINARY_DIR}/generated"
    REQUIRES
        esp_wifi
        smartconfig_component
        app_event_component
        i2c_bus_component
        xl9555_component
        nvs_flash
        freertos
        driver
        esp_driver_gpio
        mqtt
)
